Fixed search margin on smaller devices

--- a/css/main.less
+++ b/css/main.less
@@ -207,6 +207,10 @@ h1, h2, h3 {
   width: 100%;
 }
 
+.navbar-form {
+    margin-top: 0;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
